--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -5,10 +5,15 @@
 {% block content %}
 <h2 class="orange-text">Archives</h2>
 <div class="row">
-    <div class="collection">
-        {% for article in dates %}
-        <a class="collection-item truncate" href="{{SITEURL}}/{{ article.url }}">{{article.title}} <sub>{{article.locale_date}}</sub></a>
-        {% endfor %}
-    </div>
+  <ul class="collection">
+    {% for article in dates %}
+    <li class="collection-item">
+      <a class="title" href="{{ SITEURL }}/{{ article.url }}">
+        {{ article.title }}
+      </a>
+      <span class="secondary-content">{{ article.locale_date }}</span>
+    </li>
+    {% endfor %}
+  </ul>
 </div>
 {% endblock %}
