--- a/theme/templates/categories.html
+++ b/theme/templates/categories.html
@@ -3,10 +3,13 @@
 {% block title %}{{ SITENAME }} - Categories{% endblock %}
 
 {% block content %}
-<h1 class="orange-text">Catégories du blog</h1>
+<h1 class="orange-text">Blog categories</h1>
 <div class="collection">
-    {%- for cat, articles in categories|sort_by_article_count %}
-    <a class="collection-item" href="{{ SITEURL }}/{{ cat.url }}">{{ cat }} <sup>{{ articles|count }}</sup></a>
-    {% endfor %}
+  {%- for cat, articles in categories|sort_by_article_count %}
+  <a class="collection-item"
+     href="{{ SITEURL }}/{{ cat.url }}">
+    {{ cat }} <sup>{{ articles|count }}</sup>
+  </a>
+  {% endfor %}
 <div>
 {% endblock %}
