--- a/source/assets/javascripts/components/search-box/search-index.js.erb
+++ b/source/assets/javascripts/components/search-box/search-index.js.erb
@@ -1,7 +1,21 @@
 require("lunr");
 
 // Get temporary data from `window` and cleanup.
-window.searchLunrJsPipeline();
+window.initSearchPipeline();
 searchIndexPath = window.searchIndexPath;
 delete window.searchIndexPath;
-delete window.searchLunrJsPipeline;
+delete window.initSearchPipeline;
+
+// Download index data.
+var lunrIndex = null;
+var lunrData  = null;
+$.ajax({
+  url: searchIndexPath,
+  cache: true,
+  method: 'GET',
+  success: function(data) {
+    lunrData = data;
+    lunrIndex = lunr.Index.load(lunrData.index);
+  }
+});
+console.log(lunrData);
