--- a/source/layouts/application/_header.haml
+++ b/source/layouts/application/_header.haml
@@ -1,15 +1,17 @@
 .navbar-fixed
   %nav
     .nav-wrapper
-      %a{href: "#!", class: "brand-logo"} alem0lars
-      .input-field
-        %input#search{type: "search", required: true}
-          %label{for: "search"}= icon "search"
-          = icon "close"
+      %a{href: "#!", class: "brand-logo"}= data.site.title
       %ul.right.hide-on-med-and-down
         %li
-          %a{href: "sass.html"}= icon :search
+          = tooltipped(tooltip: "Search", pos: :bottom) do
+            = link_to_dropdown("dropdown-pages") do
+            %a{href: "#!"}= icon :search
         %li
-          %a{href: "foo.html"}= icon :view_module
+          = tooltipped(tooltip: "Articles", pos: :bottom) do
+            = link_to_modal("modal-pages") do
+              = icon :book
         %li
-          %a{href: "bar.html"}= icon :more_vert
+          = tooltipped(tooltip: "Articles", pos: :bottom) do
+            = link_to_sidenav("nav-articles") do
+              = icon :description
