--- a/source/layouts/application.haml
+++ b/source/layouts/application.haml
@@ -17,12 +17,11 @@
     -# Global site settings.
     %meta{charset: "utf-8"}
     %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}
-    %meta{content: "width=device-width,user-scalable=no," \
-                   "initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0",
+    %meta{content: "width=device-width,user-scalable=no,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0",
           name: "viewport"}
 
     -# RSS autodiscovery.
-    %link{rel: "alternate", type: "application/rss+atom", href: "/atom.xml"
+    %link{rel: "alternate", type: "application/rss+atom", href: "/atom.xml",
           title: "Atom Feed for #{data.site.url}"}
 
     -# Head assets.
